--- a/style.css
+++ b/style.css
@@ -1,3 +1,57 @@
+/*! Reset */
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+  /*
+    2. Remove default margin
+  */
+  * {
+    margin: 0;
+  }
+  /*
+    3. Allow percentage-based heights in the application
+  */
+  html, body {
+    height: 100%;
+  }
+  /*
+    Typographic tweaks!
+    4. Add accessible line-height
+    5. Improve text rendering
+  */
+  body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+  }
+  /*
+    6. Improve media defaults
+  */
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  /*
+    7. Remove built-in form typography styles
+  */
+  input, button, textarea, select {
+    font: inherit;
+  }
+  /*
+    8. Avoid text overflows
+  */
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+  /*
+    9. Create a root stacking context
+  */
+  #root, #__next {
+    isolation: isolate;
+  } 
+
 :root{
     --clr-white: hsl(0, 0%, 100%);
     --clr-Light-grayish-violet: hsl(270, 3%, 87%);
@@ -6,20 +60,155 @@
     --clr-Red : hsl(0, 100%, 66%);
 
 
-    --ff-accent: 'Space Grotesk', sans-serif;
-
+    --ff-accent:'Space Grotesk', sans-serif;
     
 }
 
+body{
+    font-family:var(--ff-accent);
+    font-size: 1.125rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    
 
-
-
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
 }
 
-body{
-    Font-size: 18px;
+.main{
+    max-width: 31.25rem;
+    min-height: 43.75rem ;
+    margin: 0 auto;
+    position: relative;
+}
+
+.top{
+    background-image: url(images/bg-main-mobile.png);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    height: 15rem;
+
+    margin-bottom: 5.6875rem;
+    color: var(--clr-white);
+}
+
+
+.card-back,
+.card-front{
+    height: 9.8125rem;
+    width: 17.875rem;
+    position: absolute;
+}
+
+.card-back{
+    top: 2rem;
+    right: 1rem;
+}
+
+.card-front{
+    left: 1rem;
+    top: 7.875rem;
+}
+
+.card-logo{
+    position: absolute;
+    left: 2.25rem;
+    bottom: 4.2rem;
+    width: 3.25rem;
+}
+
+
+.cvc-on-card{
+    position: absolute;
+    right: 3.25rem;
+    bottom:7.75rem;
+
+    font-size: 9px;
+    line-height: 11px;
+    letter-spacing: 1.5px;
+
+}
+
+.number-on-card{
+    position: absolute;
+    left: 2.25rem;
+    bottom: 0.375rem;
+
+    letter-spacing:1.5px;
+    line-height: 20px;
+}
+
+.text-on-card{
+    width: 245px ;
+    display: flex; 
+    align-items: center;
+    justify-content: space-between;
+
+    position: absolute;
+    left: 2.25rem;
+    bottom: -1.375rem;
+
+    font-size: 0.6rem;
+    letter-spacing: 1.2px;
+    line-height: 11px;
+
+}
+
+.card__details{
+    padding: 0 1.5rem;
+    position: relative;
+}
+
+.form__message{
+    width: 100%;
+    margin: auto;
+    padding: 0 1.5rem;
+
+    display: grid;
+    align-items: center;
+    place-items: center;
+    gap: 1rem;
+ 
+    position: absolute;
+    top: 0;
+    left: 0; 
+
+}
+
+.form__message > h2{
+    font-size: 1.75rem;
+    line-height: 2rem;
+    letter-spacing: 3.2px;
+    color: var( --clr-Very-dark-violet);
+    margin-top: 1rem;
+    font-weight: 500;
+}
+
+.form__message > p{
+    text-transform: none;
+    color: var(--clr-Dark-grayish-violet);
+    line-height: 1.4375rem;
+    margin-bottom: 2rem;
+}
+
+.form-btn{
+    cursor: pointer;
+    text-decoration: none;
+    border: none;
+    width: 100%;
+    background-color: var(--clr-Very-dark-violet);
+    color: var(--clr-white);
+    padding: .8rem 1.5em;
+    border-radius:.5rem;
+}
+
+
+/*!================FORM====================*/
+
+.form{
+    font-size: 0.75rem;
+    letter-spacing: 2px;
+    line-height: 15px;
+
+    
+
 }
